--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "autoprefixer": "^10.4.23",
     "cron-validator": "^1.4.0",
     "driver.js": "^1.4.0",
-    "electron": "^37.10.3",
+    "electron": "37.10.3",
     "electron-builder": "26.0.12",
     "electron-vite": "^5.0.0",
     "electron-window-state": "^5.0.3",
