--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -252,7 +252,7 @@ jobs:
           PAYLOAD=$(cat <<EOF
           {
             "stream": false,
-            "model": "gpt-5-mini",
+            "model": "qwen/qwen3-32b",
             "messages": [
               {
                 "role": "system",
